Horizontal scroll fix 12

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     /* width: auto; */
     min-width: 300px;
     max-width: 100%;
+    overflow: hidden;
     padding: 1rem;
     font-family: 'Open Sans', sans-serif;
 }
